--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         </div>
 
         <div class="hero-content">
-            <img src="/image.png" alt="Victorine and Nikita" class="couple-photo">
+            <img src="photo.JPG" alt="Victorine and Nikita" class="couple-photo">
             <h1 class="names">Victorine & Nikita</h1>
             <p class="names-cyrillic">ВИКТОРИНА & НИКИТА</p>
             <p class="wedding-date">2 August 2025</p>
