--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
         <!-- Holy Spirit Dove -->
         <div class="holy-spirit-dove">
-            <img src="We.svg" alt="Holy Spirit Dove" class="dove-icon">
+            <img src="We_no_white.svg" alt="Holy Spirit Dove" class="dove-icon">
         </div>
 
         <div class="hero-content">
