--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             opacity: 0.4;
         }
 
-        /* Holy Spirit Dove */
+        <p> /* Holy Spirit Dove */
         .holy-spirit-dove {
             position: absolute;
             top: 12%;
@@ -145,6 +145,7 @@
             height: 80px;
             opacity: 0.8;
         }
+        </p>
 
         /* Sections */
         section {
@@ -300,11 +301,12 @@
                 width: 120%;
                 height: 110%;
             }
-
+            <p>
             .dove-icon {
                 width: 60px;
                 height: 60px;
             }
+            </p>
         }
 
         /* Smooth scrolling */
