--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             </div>
             
             <div class="section-content" style="margin-top: 50px;">
-                <p><em>For specific gift registries or to contribute to our funds, please contact us directly. Your thoughtfulness means the world to us!</em></p>
+                <p><em><p>Please use <a href="https://docs.google.com/spreadsheets/d/1hftauYn0dqs6Y-z3GzqXeECbmSJ_raDEaKfleExZdxk/edit?usp=sharing" target="_blank">this Google Sheets form</a> to reserve a gift idea.</p></em></p>
             </div>
         </div>
     </section>
