--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
             font-size: 2.5rem;
             text-align: center;
             color: #8b4513;
-            margin-bottom: 100px;
+            margin-top: 30px;
+            margin-bottom: 30px;
             font-style: italic;
         }
 
