--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
         /* Wishlist */
         .wishlist {
             background-color: #faf8f5;
+            margin-top: 70px;
         }
 
         .wishlist-grid {
