--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             box-sizing: border-box;
         }
 
+        h2 {
+  margin-top: 40px;  /* space above the header */
+  margin-bottom: 30px;  /* space below the header */
+        }
+
         body {
             font-family: 'Crimson Text', serif;
             background-color: #f5f3f0;
@@ -215,7 +220,6 @@
         /* Wishlist */
         .wishlist {
             background-color: #faf8f5;
-            margin-top: 70px;
         }
 
         .wishlist-grid {
