--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
             box-sizing: border-box;
         }
 
-        h2 {
-  margin-top: 60px;  /* space above the header */
-  margin-bottom: 30px;  /* space below the header */
-        }
-
         body {
             font-family: 'Crimson Text', serif;
             background-color: #f5f3f0;
@@ -61,7 +56,7 @@
             color: #a0522d;
         }
 
-        /* Hero Section */
+              /* Hero Section */
         .hero {
             height: 100vh;
             display: flex;
@@ -72,85 +67,88 @@
             background: linear-gradient(135deg, #f5f3f0 0%, #f0ede8 100%);
         }
 
-        .hero-content {
-            z-index: 2;
-        }
+.hero-content {
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Ensures children are horizontally centered */
+}
 
-        .couple-photo {
-            width: 300px;
-            height: 300px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 8px solid #8b4513;
-            margin-bottom: 30px;
-            box-shadow: 0 10px 30px rgba(139, 69, 19, 0.2);
-        }
+.couple-photo {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 8px solid #8b4513;
+    margin-bottom: 30px;
+    box-shadow: 0 10px 30px rgba(139, 69, 19, 0.2);
+}
 
-        .names {
-            font-family: 'Playfair Display', serif;
-            font-size: 3.5rem;
-            font-weight: 400;
-            color: #8b4513;
-            margin-bottom: 10px;
-            font-style: italic;
-        }
+.names {
+    font-family: 'Playfair Display', serif;
+    font-size: 3.5rem;
+    font-weight: 400;
+    color: #8b4513;
+    margin-bottom: 10px;
+    font-style: italic;
+}
 
-        .names-cyrillic {
-            font-family: 'Playfair Display', serif;
-            font-size: 2rem;
-            color: #a0522d;
-            margin-bottom: 30px;
-            letter-spacing: 2px;
-        }
+.names-cyrillic {
+    font-family: 'Playfair Display', serif;
+    font-size: 2rem;
+    color: #a0522d;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
+}
 
-        .wedding-date {
-            font-size: 1.8rem;
-            color: #8b4513;
-            font-weight: 600;
-            margin-bottom: 10px;
-        }
+.wedding-date {
+    font-size: 1.8rem;
+    color: #8b4513;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
 
-        .wedding-location {
-            font-size: 1.3rem;
-            color: #a0522d;
-            font-style: italic;
-        }
+.wedding-location {
+    font-size: 1.3rem;
+    color: #a0522d;
+    font-style: italic;
+}
 
-        /* Floral Border */
-        .floral-border-container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%;
-            max-width: 4500px;
-            height: 100%;
-            max-height: 4700px;
-            z-index: 1;
-        }
+/* Floral Border */
+.floral-border-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 4500px;
+    height: 100%;
+    max-height: 4700px;
+    z-index: 1;
+}
 
-        .floral-border {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            opacity: 0.4;
-        }
+.floral-border {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    opacity: 0.4;
+}
 
-        <p> /* Holy Spirit Dove */
-        .holy-spirit-dove {
-            position: absolute;
-            top: 12%;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 3;
-        }
+/* Holy Spirit Dove */
+.holy-spirit-dove {
+    position: absolute;
+    top: 12%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
+}
 
-        .dove-icon {
-            width: 80px;
-            height: 80px;
-            opacity: 0.8;
-        }
-        </p>
+.dove-icon {
+    width: 80px;
+    height: 80px;
+    opacity: 0.8;
+}
+
 
         /* Sections */
         section {
