--- a/index.html
+++ b/index.html
@@ -220,6 +220,16 @@
             background-color: #faf8f5;
         }
 
+        .quote {
+            font-style: italic;
+            font-size: 1.4rem;
+            color: #8b4513;
+            margin: 30px 0;
+            padding: 20px;
+            border-left: 4px solid #a0522d;
+            background-color: rgba(139, 69, 19, 0.05);
+        }
+
         .wishlist-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -417,7 +427,7 @@
                 <div class="info-card">
                     <h3>Dress Code</h3>
                     <p><strong>Style:</strong> Semi-formal / Cocktail </p>
-                    <p><strong>Colors:</strong> For women: flowers colours, for men: please avoid white and cream</p>
+                    <p><strong>Colors:</strong> For women: flowers colours, for men: the costume may be any color, with the exception of white and cream.</p>
                     <p>We encourage earth tones, as well as bright elegant colors that complement our botanical theme. Please avoid wearing sneakers. </p>
                 </div>
                 
