--- a/index.html
+++ b/index.html
@@ -499,7 +499,9 @@
             </div>
 
             <div class="quote">
+                <p style="margin-top: 30px; font-style: italic;">
                     "Let the peace of Christ rule in your hearts, since as members of one body you were called to peace. And be thankful" (Colossians 3:15)
+                </p>
             </div>
         </div>
     </section>
