--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 
                 <div class="wishlist-item">
                     <h4>Art & Photography</h4>
-                    <p>A beginner camera like Sony Alpha ZV‑E10 (without lens) and art supplies (canvases) to capture our life's beautiful moments as well as to express our strive for creativity.</p>
+                    <p>A beginner camera like Sony Alpha ZV‑E10 (without lens) to capture our life's beautiful moments and art supplies (canvases) to express our strive for creativity.</p>
                 </div>
 
                 <div class="wishlist-item">
@@ -515,14 +515,12 @@
                 <div class="contact-person">
                     <h4>Victorine Piot</h4>Ω
                     <p>victorine.piot@gmail.com</p>
-                    <p>Alt Lankwitz 39</p>
-                    <p>12247 Berlin</p>
+                    <p>13088 Berlin</p>
                 </div>
                 <div class="contact-person">
                     <h4>Nikita Teploukhov</h4>
                     <p>neteploukhov@gmail.com</p>
-                    <p>Schönhauser Allee 182</p>
-                    <p>10119 Berlin</p>
+                    <p>13088 Berlin</p>
                 </div>
             </div>
             <p style="margin-top: 30px; font-style: italic;">
