--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             </div>
             
             <div class="section-content" style="margin-top: 50px;">
-                <p><em><p>Please use <a href="https://docs.google.com/spreadsheets/d/1hftauYn0dqs6Y-z3GzqXeECbmSJ_raDEaKfleExZdxk/edit?usp=sharing" target="_blank">this Google Sheets form</a> to reserve a gift idea.</p></em></p>
+                <p><em><p>Please use <a href="https://docs.google.com/spreadsheets/d/1hftauYn0dqs6Y-z3GzqXeECbmSJ_raDEaKfleExZdxk/edit?usp=sharing" target="_blank">this Google form</a> to reserve a gift idea from our wishlist.</p></em></p>
             </div>
 
             <div class="quote">
@@ -513,7 +513,7 @@
             <h3 style="font-family: 'Playfair display', serif; margin-bottom: 30px;">Contact Us</h3>
             <div class="contact-info">
                 <div class="contact-person">
-                    <h4>Victorine Piot</h4>Ω
+                    <h4>Victorine Piot</h4>
                     <p>victorine.piot@gmail.com</p>
                     <p>13088 Berlin</p>
                 </div>
