--- a/index.html
+++ b/index.html
@@ -463,11 +463,12 @@
                 <p>Your presence at our wedding is the greatest gift we could ask for. However, if you would like to honor us with a gift, here are some ideas:</p>
             </div>
 
-            <div class="quote">
+          <div class="quote" style="text-align: center;">
                 <p style="font-style: italic;">
-                    Please use <a href="https://docs.google.com/spreadsheets/d/1hftauYn0dqs6Y-z3GzqXeECbmSJ_raDEaKfleExZdxk/edit?usp=sharing" target="_blank">this Google form</a> to reserve a gift idea from our wishlist.
+                🎁 Please use <a href="https://docs.google.com/spreadsheets/d/1hftauYn0dqs6Y-z3GzqXeECbmSJ_raDEaKfleExZdxk/edit?usp=sharing" target="_blank">this Google form</a> to reserve a gift idea from our wishlist.
                 </p>
-            </div>
+          </div>
+
             
             <div class="wishlist-grid">
                 <div class="wishlist-item">
