--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
                 <div class="quote">
                     "Love consists in this, that two solitudes meet, protect and greet each other."
-                    <p>Letters to a Young Poet (1929) 14 May 1904 (tr. Hugh MacLennan)</p>
+                    <p>R.M. Rilke, Letters to a Young Poet, 14 May 1904</p>
                 </div>
             </div>
         </div>
