--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                 
             </div>
 
-            <div class="quote">
+            <div class="quote" style="text-align: center;">
                 <p style="font-style: italic;">
                     "Let the peace of Christ rule in your hearts, since as members of one body you were called to peace. And be thankful" (Colossians 3:15)
                 </p>
