--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <div class="wishlist-grid">
                 <div class="wishlist-item">
                     <h4>Honeymoon Fund ⛰️</h4>
-                    <p>Help us create beautiful memories on our honeymoon adventure to the French countryside and Russian cultural sites.</p>
+                    <p>We were thinking of taking a spontaneous trip the week of August 11-15 for our honeymoon. Thank you for your support!</p>
                 </div>
                 
                 <div class="wishlist-item">
