--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             background-color: rgba(139, 69, 19, 0.05);
         }
 
-        /* Practical Guide */
+        /* Practical Guide 🧭*/
         .practical-guide {
             background-color: #f5f3f0;
         }
@@ -504,7 +504,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <h3 style="font-family: 'Playfair display', serif; margin-bottom: 30px;">👋🏻 Contact Us</h3>
+            <h3 style="font-family: 'Playfair display', serif; margin-bottom: 30px;">Contact Us 👋🏻</h3>
             <div class="contact-info">
                 <div class="contact-person">
                     <h4>Victorine Piot</h4>
