--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             background-color: rgba(139, 69, 19, 0.05);
         }
 
-        /* Practical Guide 🧭*/
+        /* Practical Guide */
         .practical-guide {
             background-color: #f5f3f0;
         }
@@ -342,10 +342,10 @@
     <!-- Navigation -->
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#story">Our Story</a></li>
-            <li><a href="#practical">Practical Guide</a></li>
-            <li><a href="#wishlist">Wishlist</a></li>
+            <li><a href="#home">Home 🏡</a></li>
+            <li><a href="#story">Our Story ❤️</a></li>
+            <li><a href="#practical">Practical Guide 🧭</a></li>
+            <li><a href="#wishlist">Wishlist 🎁</a></li>
         </ul>
     </nav>
 
@@ -408,7 +408,7 @@
     <!-- Practical Guide Section -->
     <section id="practical" class="practical-guide">
         <div class="container">
-            <h2 class="section-title">Practical Guide</h2>
+            <h2 class="section-title">Practical Guide 🧭</h2>
             <div class="info-grid">
                 <div class="info-card">
                     <h3>Wedding Mass Details ⛪️</h3>
