--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     <!-- Navigation -->
     <nav>
         <ul>
-            <li><a href="#home">Home 🏡</a></li>
+            <li><a href="#home">Welcome 🤗</a></li>
             <li><a href="#story">Our Story ❤️</a></li>
             <li><a href="#practical">Practical Guide 🧭</a></li>
             <li><a href="#wishlist">Wishlist 🎁</a></li>
