--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             color: #8b4513;
             margin-top: 15px;
             margin-bottom: 30px;
-            font-style: italic;
+            font-style: normal;
         }
 
         .section-content {
