--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <div class="wishlist-grid">
                 <div class="wishlist-item">
                     <h4>Honeymoon Fund ⛰️</h4>
-                    <p>We were thinking of taking a spontaneous trip the week of August 11-15 for our honeymoon. Thank you for your support!</p>
+                    <p>We are thinking of going on a honeymoon trip the week of August 11-15. We appreciate your financial support in making this journey possible!</p>
                 </div>
                 
                 <div class="wishlist-item">
