--- a/index.html
+++ b/index.html
@@ -437,8 +437,7 @@
                     <p><strong>Public Transport:</strong> S-Bahn Line S2 to Attilastr., or S25,S26 to Lankwitz</p>
                     <p><strong>Parking:</strong> Limited street parking available</p>
                     <p>We recommend using public transportation or ride-sharing services.</p>
-                    <p>9:30 — a bus transfer from Lankwitz monastery to Herz Jesu Church will be provided, 30 seats</p>
-                    <p>13:30 — a bus transfer from Herz Jesu Church to Lankwitz monastery will be provided, 63 seats</p>
+                    <p><strong>Bus transfers:</strong> at 9:30am — from Lankwitz monastery to Herz Jesu Church, 30 seats, and at 1:30pm — from Herz Jesu Church to Lankwitz monastery, 63 seats.</p>
                 </div>
                 
                 <div class="info-card">
